Version 1.9.1
- CHG: static linking to CRT and MFC. (Stefan)
- FIX: When Aero dialogs are disabled, the merge dlg
       background was painted black. (Stefan)

Version 1.9.0
See the release notes here:
http://tortoisesvn.net/tsvn_1.9_releasenotes.html

Version 1.8.12
- BUG: Issue #691: Bug when SVN-copying (overwriting) files
       inside a working copy. (Stefan)
- BUG: Issue #692: Cleanup reports error when there is
       no cleanup to perform . (Stefan)

Version 1.8.11
- BUG: Issue #682: Statistics graph for "Commits by author"
       error when "Authors case sensitive" is toggled. (Stefan)
- BUG: Issue #685: Memory leak showing status. (Stefan)
- BUG: Autocorrect case-renames if already done manually. (Stefan)
- BUG: Focus lost in File diff dialog. (Stefan)
- BUG: Cached HEAD revision when doing updates. (Stefan)
- BUG: empty path shown in tree conflict resolver dialog. (Stefan)
- BUG: working copy revision not shown in revision graph. (Stefan)
- BUG: Focus problems when diffing. (Stefan)

Version 1.8.10
- BUG: Fails to run on Windows XP. (Stefan)

Version 1.8.9
- BUG: Issue #661: memory leak committing multiple
       working copies. (Stefan)
- BUG: Issue #662: drawing bug in progress dialog. (Stefan)
- BUG: issue #665: inherited properties give
       unexpected results. (Stefan)
- BUG: Issue #667: Detect if repository browser
       was cancelled. (Stefan)
- BUG: Issue #669: Repobrowser closes when escape is
       pressed to cancel an edit. (Stefan)
- BUG: Issue #671: Crash editing properties from the
       repository browser. (Stefan)
- BUG: Issue #672: merging from progress dialog does
       not record merge info. (Stefan)
- BUG: renaming in the repobrowser tree view with F2
       did not work. (Stefan)
- BUG: Issue #673: filtering out regular
       expressions crashes. (Stefan)
- BUG: Issue #674: illegal temp file name when
       diffing from server root. (Stefan)
- BUG: Issue #675: bug-id field not set correctly