@@ -1,7 +1,9 @@
 Version 1.9.1
 - CHG: static linking to CRT and MFC. (Stefan)
-- FIX: When Aero dialogs are disabled, the merge dlg
+- BUG: When Aero dialogs are disabled, the merge dlg
        background was painted black. (Stefan)
+- BUG: SubWCRev segfaulted when started for a
+       non-wc path. (Stefan)
 
 Version 1.9.0
 See the release notes here:
